Fix homepage banner image message spacing

--- a/style.css
+++ b/style.css
@@ -550,7 +550,7 @@ footer {
 	.homepage_banner .textwidget h4 {
 		position: absolute;
 	    margin: 0 16%;
-	    margin-top: -33.5%;
+	    margin-top: -32.6%;
 	    font-size: 1em;
 	    width: 68%;
 	    padding: 0;
